force-app/main/default/objects/Order/fields/ShopifyFinancialStatus__c.field-meta.xml
<CustomField>
    <fullName>ShopifyFinancialStatus__c</fullName>
    <label>Shopify Financial Status</label>
    <type>Text</type>
    <length>50</length>
    <description>Financial status of the order from Shopify</description>
</CustomField>