force-app/main/default/objects/Order/fields/ShopifyOrderId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyOrderId__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Order ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
    <description>ID único de la orden en Shopify para sincronización</description>
</CustomField>