force-app/main/default/objects/Order/fields/ShopifyOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ShopifyOrderNumber__c</fullName>
    <label>Shopify Order Number</label>
    <length>255</length>
    <type>Text</type>
    <description>Número de orden de Shopify</description>
</CustomField>