force-app/main/default/objects/Order/fields/ShopifyTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ShopifyTotalAmount__c</fullName>
    <label>Shopify Total Amount</label>
    <type>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total amount of the order from Shopify</description>
</CustomField>